# predict

./: .env.example  .gitignore  AGENTS.md  RALPH_TASK.md  README.md  run.sh
.clinerules/: Caveman.md
.cursor/hooks/state/: continual-learning-index.json  continual-learning.json
.cursor/plans/: frontend-react-structure.plan.md
.ralph/: progress.md  tasks.mtime  tasks.yaml
backend/: .env.example  README.md  live_games.json  pyproject.toml  requirements.txt
backend/scripts/: serve.py
backend/src/: app.py  auth.py  config.py  driver.py  kalshi_trade_client.py  live_games_enrich.py  runner.py  sports.py  state.py  utils.py
backend/src/backend/: __init__.py  app.py  dev.py  dev_console.py  settings.py
backend/src/backend/kalshi/: __init__.py  calendar_live.py  constants.py  game_progress.py  http_client.py  signing.py  sports_live.py  ws.py
backend/src/backend/routers/: kalshi.py
backend/tests/: test_live_games_enrich.py
docs/: frontend-conventions.md  third-party-assets.md
docs/ai/features/: calendar-live-live-data-progress-enrichment.md  explorer-calendar-live-optimization-audit.md  (+11 more)
frontend/: .env.example  .gitignore  .prettierignore  .prettierrc.json  README.md  components.json  eslint.config.js  index.html  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.css  App.tsx  app.css
plans/: README.md  frontend-overview.md  run-sh-orchestration.md
plans/docs/: README.md  backend-overview.md  frontend-overview.md  kalshi-trade-api-market-data.md  run-sh-orchestration.md
plans/implementation/: README.md  frontend-backend-api-plan.md
(+115 files in other folders)
