[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for Kalshi API and WebSocket integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.7",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "pydantic-settings>=2.13.1",
    "uvicorn[standard]>=0.44.0",
    "websockets>=16.0",
]

[project.optional-dependencies]
dev = [
    "sqladmin>=0.24.0",
    "sqlalchemy>=2.0.49",
]

[project.scripts]
serve = "backend.dev:serve"

[build-system]
requires = ["uv_build>=0.11.4,<0.12.0"]
build-backend = "uv_build"
